# ChangeLog for dev-scheme/gambit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-scheme/gambit/ChangeLog,v 1.9 2007/07/09 13:37:31 hkbst Exp $

  09 Jul 2007; Marijn Schouten <hkBst@gentoo.org> gambit-4.0_beta22.ebuild:
  add emacs pre- and postlude, bug 184621

  11 May 2007; Marijn Schouten <hkBst@gentoo.org> gambit-4.0_beta22.ebuild:
  fix tests

  11 May 2007; Marijn Schouten <hkBst@gentoo.org> gambit-4.0_beta22.ebuild:
  add automatic loading of syntax-case. This may cause tests to fail. The
  tests are probably faulty.

  10 May 2007; Marijn Schouten <hkBst@gentoo.org> -gambit-4.0_beta15.ebuild,
  -gambit-4.0_beta20.ebuild:
  remove older, probably broken ebuilds

  10 May 2007; Marijn Schouten <hkBst@gentoo.org> gambit-4.0_beta22.ebuild:
  fix beta22 syntax-case support

*gambit-4.0_beta22 (19 Apr 2007)

  19 Apr 2007; Marijn Schouten <hkBst@gentoo.org> +gambit-4.0_beta22.ebuild:
  add beta22

  31 Jan 2007; Marijn Schouten <hkBst@gentoo.org> gambit-4.0_beta20.ebuild:
  fix virtual/emacs dep

*gambit-4.0_beta20 (29 Jan 2007)

  29 Jan 2007; Marijn Schouten <hkBst@gentoo.org> +gambit-4.0_beta20.ebuild:
  add beta20

*gambit-4.0_beta15 (17 Oct 2005)

  17 Oct 2005; Matthew Kennedy <mkennedy@gentoo.org>
  +files/50gambit-gentoo.el, +metadata.xml, +gambit-4.0_beta15.ebuild:
  Initial port. Ebuild contributed by Mihai Radu <tiganu@gmail.com>, David
  Wang <tiganu@gmail.com>, Pupeno <pupeno@pupeno.com> and Matthew Kennedy
  <mkennedy@gentoo.org>; Resolves Bug #67906.
