@@ -1,0 +1,3 @@
+MD5 4421d4e4489713c43626975e7ad3be46 gambc-v4_0_0.tgz 11645990
+RMD160 62f71be66dd6f16a61c92a3e5217a9e41374268d gambc-v4_0_0.tgz 11645990
+SHA256 a4be96da0bb4636e98b8851ea10e0ab284169e8e14613a01e4e5e5fd9bc6a5d2 gambc-v4_0_0.tgz 11645990
